// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResistorForm should render a 3-band resistor 1`] = `
<form
  className="resistor-form"
>
  <div
    className="row"
  >
    <div
      className="form-group col-sm-6 offset-sm-3 col-md-2 offset-md-5"
    >
      <label>
        Strips
        <select
          className="form-control"
          name="bands"
          onChange={[Function]}
          value={3}
        >
          <option
            key="3"
            value={3}
          >
            3-strip
          </option>
          <option
            key="4"
            value={4}
          >
            4-strip
          </option>
          <option
            key="5"
            value={5}
          >
            5-strip
          </option>
          <option
            key="6"
            value={6}
          >
            6-strip
          </option>
        </select>
      </label>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-xs-6 col-sm-2 offset-sm-3"
      key="digit1"
    >
      <BandSelector
        key="digit1"
        label="1st Digit"
        name="digit1"
        onChange={[Function]}
        options={
          Array [
            Object {
              "className": "brown",
              "label": "brown",
              "value": 1,
            },
            Object {
              "className": "red",
              "label": "red",
              "value": 2,
            },
            Object {
              "className": "orange",
              "label": "orange",
              "value": 3,
            },
            Object {
              "className": "yellow",
              "label": "yellow",
              "value": 4,
            },
            Object {
              "className": "green",
              "label": "green",
              "value": 5,
            },
            Object {
              "className": "blue",
              "label": "blue",
              "value": 6,
            },
            Object {
              "className": "violet",
              "label": "violet",
              "value": 7,
            },
            Object {
              "className": "gray",
              "label": "gray",
              "value": 8,
            },
            Object {
              "className": "white",
              "label": "white",
              "value": 9,
            },
          ]
        }
        value={1}
      />
    </div>
    <div
      className="col-xs-6 col-sm-2"
      key="digit2"
    >
      <BandSelector
        key="digit2"
        label="2nd Digit"
        name="digit2"
        onChange={[Function]}
        options={
          Array [
            Object {
              "className": "black",
              "label": "black",
              "value": 0,
            },
            Object {
              "className": "brown",
              "label": "brown",
              "value": 1,
            },
            Object {
              "className": "red",
              "label": "red",
              "value": 2,
            },
            Object {
              "className": "orange",
              "label": "orange",
              "value": 3,
            },
            Object {
              "className": "yellow",
              "label": "yellow",
              "value": 4,
            },
            Object {
              "className": "green",
              "label": "green",
              "value": 5,
            },
            Object {
              "className": "blue",
              "label": "blue",
              "value": 6,
            },
            Object {
              "className": "violet",
              "label": "violet",
              "value": 7,
            },
            Object {
              "className": "gray",
              "label": "gray",
              "value": 8,
            },
            Object {
              "className": "white",
              "label": "white",
              "value": 9,
            },
          ]
        }
        value={0}
      />
    </div>
    <div
      className="col-xs-6 col-sm-2"
      key="multiplier"
    >
      <BandSelector
        key="multiplier"
        label="Multiplier"
        name="multiplier"
        onChange={[Function]}
        options={
          Array [
            Object {
              "className": "black",
              "label": "black",
              "value": 0,
            },
            Object {
              "className": "brown",
              "label": "brown",
              "value": 1,
            },
            Object {
              "className": "red",
              "label": "red",
              "value": 2,
            },
            Object {
              "className": "orange",
              "label": "orange",
              "value": 3,
            },
            Object {
              "className": "yellow",
              "label": "yellow",
              "value": 4,
            },
            Object {
              "className": "green",
              "label": "green",
              "value": 5,
            },
            Object {
              "className": "blue",
              "label": "blue",
              "value": 6,
            },
            Object {
              "className": "violet",
              "label": "violet",
              "value": 7,
            },
            Object {
              "className": "gray",
              "label": "gray",
              "value": 8,
            },
            Object {
              "className": "white",
              "label": "white",
              "value": 9,
            },
            Object {
              "className": "gold",
              "label": "gold",
              "value": -1,
            },
            Object {
              "className": "silver",
              "label": "silver",
              "value": -2,
            },
          ]
        }
        value={0}
      />
    </div>
  </div>
</form>
`;

exports[`ResistorForm should render a 4-band resistor 1`] = `
<form
  className="resistor-form"
>
  <div
    className="row"
  >
    <div
      className="form-group col-sm-6 offset-sm-3 col-md-2 offset-md-5"
    >
      <label>
        Strips
        <select
          className="form-control"
          name="bands"
          onChange={[Function]}
          value={4}
        >
          <option
            key="3"
            value={3}
          >
            3-strip
          </option>
          <option
            key="4"
            value={4}
          >
            4-strip
          </option>
          <option
            key="5"
            value={5}
          >
            5-strip
          </option>
          <option
            key="6"
            value={6}
          >
            6-strip
          </option>
        </select>
      </label>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-xs-6 col-sm-2 offset-sm-2"
      key="digit1"
    >
      <BandSelector
        key="digit1"
        label="1st Digit"
        name="digit1"
        onChange={[Function]}
        options={
          Array [
            Object {
              "className": "brown",
              "label": "brown",
              "value": 1,
            },
            Object {
              "className": "red",
              "label": "red",
              "value": 2,
            },
            Object {
              "className": "orange",
              "label": "orange",
              "value": 3,
            },
            Object {
              "className": "yellow",
              "label": "yellow",
              "value": 4,
            },
            Object {
              "className": "green",
              "label": "green",
              "value": 5,
            },
            Object {
              "className": "blue",
              "label": "blue",
              "value": 6,
            },
            Object {
              "className": "violet",
              "label": "violet",
              "value": 7,
            },
            Object {
              "className": "gray",
              "label": "gray",
              "value": 8,
            },
            Object {
              "className": "white",
              "label": "white",
              "value": 9,
            },
          ]
        }
        value={1}
      />
    </div>
    <div
      className="col-xs-6 col-sm-2"
      key="digit2"
    >
      <BandSelector
        key="digit2"
        label="2nd Digit"
        name="digit2"
        onChange={[Function]}
        options={
          Array [
            Object {
              "className": "black",
              "label": "black",
              "value": 0,
            },
            Object {
              "className": "brown",
              "label": "brown",
              "value": 1,
            },
            Object {
              "className": "red",
              "label": "red",
              "value": 2,
            },
            Object {
              "className": "orange",
              "label": "orange",
              "value": 3,
            },
            Object {
              "className": "yellow",
              "label": "yellow",
              "value": 4,
            },
            Object {
              "className": "green",
              "label": "green",
              "value": 5,
            },
            Object {
              "className": "blue",
              "label": "blue",
              "value": 6,
            },
            Object {
              "className": "violet",
              "label": "violet",
              "value": 7,
            },
            Object {
              "className": "gray",
              "label": "gray",
              "value": 8,
            },
            Object {
              "className": "white",
              "label": "white",
              "value": 9,
            },
          ]
        }
        value={0}
      />
    </div>
    <div
      className="col-xs-6 col-sm-2"
      key="multiplier"
    >
      <BandSelector
        key="multiplier"
        label="Multiplier"
        name="multiplier"
        onChange={[Function]}
        options={
          Array [
            Object {
              "className": "black",
              "label": "black",
              "value": 0,
            },
            Object {
              "className": "brown",
              "label": "brown",
              "value": 1,
            },
            Object {
              "className": "red",
              "label": "red",
              "value": 2,
            },
            Object {
              "className": "orange",
              "label": "orange",
              "value": 3,
            },
            Object {
              "className": "yellow",
              "label": "yellow",
              "value": 4,
            },
            Object {
              "className": "green",
              "label": "green",
              "value": 5,
            },
            Object {
              "className": "blue",
              "label": "blue",
              "value": 6,
            },
            Object {
              "className": "violet",
              "label": "violet",
              "value": 7,
            },
            Object {
              "className": "gray",
              "label": "gray",
              "value": 8,
            },
            Object {
              "className": "white",
              "label": "white",
              "value": 9,
            },
            Object {
              "className": "gold",
              "label": "gold",
              "value": -1,
            },
            Object {
              "className": "silver",
              "label": "silver",
              "value": -2,
            },
          ]
        }
        value={0}
      />
    </div>
    <div
      className="col-xs-6 col-sm-2"
      key="tolerance"
    >
      <BandSelector
        key="tolerance"
        label="Tolerance"
        name="tolerance"
        onChange={[Function]}
        options={
          Array [
            Object {
              "className": "brown",
              "label": "brown",
              "value": 1,
            },
            Object {
              "className": "red",
              "label": "red",
              "value": 2,
            },
            Object {
              "className": "green",
              "label": "green",
              "value": 0.5,
            },
            Object {
              "className": "blue",
              "label": "blue",
              "value": 0.25,
            },
            Object {
              "className": "violet",
              "label": "violet",
              "value": 0.1,
            },
            Object {
              "className": "gold",
              "label": "gold",
              "value": 5,
            },
            Object {
              "className": "silver",
              "label": "silver",
              "value": 10,
            },
          ]
        }
        value={5}
      />
    </div>
  </div>
</form>
`;

exports[`ResistorForm should render a 5-band resistor 1`] = `
<form
  className="resistor-form"
>
  <div
    className="row"
  >
    <div
      className="form-group col-sm-6 offset-sm-3 col-md-2 offset-md-5"
    >
      <label>
        Strips
        <select
          className="form-control"
          name="bands"
          onChange={[Function]}
          value={5}
        >
          <option
            key="3"
            value={3}
          >
            3-strip
          </option>
          <option
            key="4"
            value={4}
          >
            4-strip
          </option>
          <option
            key="5"
            value={5}
          >
            5-strip
          </option>
          <option
            key="6"
            value={6}
          >
            6-strip
          </option>
        </select>
      </label>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-xs-6 col-sm-2 offset-sm-1"
      key="digit1"
    >
      <BandSelector
        key="digit1"
        label="1st Digit"
        name="digit1"
        onChange={[Function]}
        options={
          Array [
            Object {
              "className": "brown",
              "label": "brown",
              "value": 1,
            },
            Object {
              "className": "red",
              "label": "red",
              "value": 2,
            },
            Object {
              "className": "orange",
              "label": "orange",
              "value": 3,
            },
            Object {
              "className": "yellow",
              "label": "yellow",
              "value": 4,
            },
            Object {
              "className": "green",
              "label": "green",
              "value": 5,
            },
            Object {
              "className": "blue",
              "label": "blue",
              "value": 6,
            },
            Object {
              "className": "violet",
              "label": "violet",
              "value": 7,
            },
            Object {
              "className": "gray",
              "label": "gray",
              "value": 8,
            },
            Object {
              "className": "white",
              "label": "white",
              "value": 9,
            },
          ]
        }
        value={1}
      />
    </div>
    <div
      className="col-xs-6 col-sm-2"
      key="digit2"
    >
      <BandSelector
        key="digit2"
        label="2nd Digit"
        name="digit2"
        onChange={[Function]}
        options={
          Array [
            Object {
              "className": "black",
              "label": "black",
              "value": 0,
            },
            Object {
              "className": "brown",
              "label": "brown",
              "value": 1,
            },
            Object {
              "className": "red",
              "label": "red",
              "value": 2,
            },
            Object {
              "className": "orange",
              "label": "orange",
              "value": 3,
            },
            Object {
              "className": "yellow",
              "label": "yellow",
              "value": 4,
            },
            Object {
              "className": "green",
              "label": "green",
              "value": 5,
            },
            Object {
              "className": "blue",
              "label": "blue",
              "value": 6,
            },
            Object {
              "className": "violet",
              "label": "violet",
              "value": 7,
            },
            Object {
              "className": "gray",
              "label": "gray",
              "value": 8,
            },
            Object {
              "className": "white",
              "label": "white",
              "value": 9,
            },
          ]
        }
        value={0}
      />
    </div>
    <div
      className="col-xs-6 col-sm-2"
      key="digit3"
    >
      <BandSelector
        key="digit3"
        label="3rd Digit"
        name="digit3"
        onChange={[Function]}
        options={
          Array [
            Object {
              "className": "black",
              "label": "black",
              "value": 0,
            },
            Object {
              "className": "brown",
              "label": "brown",
              "value": 1,
            },
            Object {
              "className": "red",
              "label": "red",
              "value": 2,
            },
            Object {
              "className": "orange",
              "label": "orange",
              "value": 3,
            },
            Object {
              "className": "yellow",
              "label": "yellow",
              "value": 4,
            },
            Object {
              "className": "green",
              "label": "green",
              "value": 5,
            },
            Object {
              "className": "blue",
              "label": "blue",
              "value": 6,
            },
            Object {
              "className": "violet",
              "label": "violet",
              "value": 7,
            },
            Object {
              "className": "gray",
              "label": "gray",
              "value": 8,
            },
            Object {
              "className": "white",
              "label": "white",
              "value": 9,
            },
          ]
        }
        value={0}
      />
    </div>
    <div
      className="col-xs-6 col-sm-2"
      key="multiplier"
    >
      <BandSelector
        key="multiplier"
        label="Multiplier"
        name="multiplier"
        onChange={[Function]}
        options={
          Array [
            Object {
              "className": "black",
              "label": "black",
              "value": 0,
            },
            Object {
              "className": "brown",
              "label": "brown",
              "value": 1,
            },
            Object {
              "className": "red",
              "label": "red",
              "value": 2,
            },
            Object {
              "className": "orange",
              "label": "orange",
              "value": 3,
            },
            Object {
              "className": "yellow",
              "label": "yellow",
              "value": 4,
            },
            Object {
              "className": "green",
              "label": "green",
              "value": 5,
            },
            Object {
              "className": "blue",
              "label": "blue",
              "value": 6,
            },
            Object {
              "className": "violet",
              "label": "violet",
              "value": 7,
            },
            Object {
              "className": "gray",
              "label": "gray",
              "value": 8,
            },
            Object {
              "className": "white",
              "label": "white",
              "value": 9,
            },
            Object {
              "className": "gold",
              "label": "gold",
              "value": -1,
            },
            Object {
              "className": "silver",
              "label": "silver",
              "value": -2,
            },
          ]
        }
        value={0}
      />
    </div>
    <div
      className="col-xs-6 col-sm-2"
      key="tolerance"
    >
      <BandSelector
        key="tolerance"
        label="Tolerance"
        name="tolerance"
        onChange={[Function]}
        options={
          Array [
            Object {
              "className": "brown",
              "label": "brown",
              "value": 1,
            },
            Object {
              "className": "red",
              "label": "red",
              "value": 2,
            },
            Object {
              "className": "green",
              "label": "green",
              "value": 0.5,
            },
            Object {
              "className": "blue",
              "label": "blue",
              "value": 0.25,
            },
            Object {
              "className": "violet",
              "label": "violet",
              "value": 0.1,
            },
            Object {
              "className": "gold",
              "label": "gold",
              "value": 5,
            },
            Object {
              "className": "silver",
              "label": "silver",
              "value": 10,
            },
          ]
        }
        value={10}
      />
    </div>
  </div>
</form>
`;

exports[`ResistorForm should render a 6-band resistor 1`] = `
<form
  className="resistor-form"
>
  <div
    className="row"
  >
    <div
      className="form-group col-sm-6 offset-sm-3 col-md-2 offset-md-5"
    >
      <label>
        Strips
        <select
          className="form-control"
          name="bands"
          onChange={[Function]}
          value={6}
        >
          <option
            key="3"
            value={3}
          >
            3-strip
          </option>
          <option
            key="4"
            value={4}
          >
            4-strip
          </option>
          <option
            key="5"
            value={5}
          >
            5-strip
          </option>
          <option
            key="6"
            value={6}
          >
            6-strip
          </option>
        </select>
      </label>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-xs-6 col-sm-2 offset-sm-0"
      key="digit1"
    >
      <BandSelector
        key="digit1"
        label="1st Digit"
        name="digit1"
        onChange={[Function]}
        options={
          Array [
            Object {
              "className": "brown",
              "label": "brown",
              "value": 1,
            },
            Object {
              "className": "red",
              "label": "red",
              "value": 2,
            },
            Object {
              "className": "orange",
              "label": "orange",
              "value": 3,
            },
            Object {
              "className": "yellow",
              "label": "yellow",
              "value": 4,
            },
            Object {
              "className": "green",
              "label": "green",
              "value": 5,
            },
            Object {
              "className": "blue",
              "label": "blue",
              "value": 6,
            },
            Object {
              "className": "violet",
              "label": "violet",
              "value": 7,
            },
            Object {
              "className": "gray",
              "label": "gray",
              "value": 8,
            },
            Object {
              "className": "white",
              "label": "white",
              "value": 9,
            },
          ]
        }
        value={1}
      />
    </div>
    <div
      className="col-xs-6 col-sm-2"
      key="digit2"
    >
      <BandSelector
        key="digit2"
        label="2nd Digit"
        name="digit2"
        onChange={[Function]}
        options={
          Array [
            Object {
              "className": "black",
              "label": "black",
              "value": 0,
            },
            Object {
              "className": "brown",
              "label": "brown",
              "value": 1,
            },
            Object {
              "className": "red",
              "label": "red",
              "value": 2,
            },
            Object {
              "className": "orange",
              "label": "orange",
              "value": 3,
            },
            Object {
              "className": "yellow",
              "label": "yellow",
              "value": 4,
            },
            Object {
              "className": "green",
              "label": "green",
              "value": 5,
            },
            Object {
              "className": "blue",
              "label": "blue",
              "value": 6,
            },
            Object {
              "className": "violet",
              "label": "violet",
              "value": 7,
            },
            Object {
              "className": "gray",
              "label": "gray",
              "value": 8,
            },
            Object {
              "className": "white",
              "label": "white",
              "value": 9,
            },
          ]
        }
        value={0}
      />
    </div>
    <div
      className="col-xs-6 col-sm-2"
      key="digit3"
    >
      <BandSelector
        key="digit3"
        label="3rd Digit"
        name="digit3"
        onChange={[Function]}
        options={
          Array [
            Object {
              "className": "black",
              "label": "black",
              "value": 0,
            },
            Object {
              "className": "brown",
              "label": "brown",
              "value": 1,
            },
            Object {
              "className": "red",
              "label": "red",
              "value": 2,
            },
            Object {
              "className": "orange",
              "label": "orange",
              "value": 3,
            },
            Object {
              "className": "yellow",
              "label": "yellow",
              "value": 4,
            },
            Object {
              "className": "green",
              "label": "green",
              "value": 5,
            },
            Object {
              "className": "blue",
              "label": "blue",
              "value": 6,
            },
            Object {
              "className": "violet",
              "label": "violet",
              "value": 7,
            },
            Object {
              "className": "gray",
              "label": "gray",
              "value": 8,
            },
            Object {
              "className": "white",
              "label": "white",
              "value": 9,
            },
          ]
        }
        value={0}
      />
    </div>
    <div
      className="col-xs-6 col-sm-2"
      key="multiplier"
    >
      <BandSelector
        key="multiplier"
        label="Multiplier"
        name="multiplier"
        onChange={[Function]}
        options={
          Array [
            Object {
              "className": "black",
              "label": "black",
              "value": 0,
            },
            Object {
              "className": "brown",
              "label": "brown",
              "value": 1,
            },
            Object {
              "className": "red",
              "label": "red",
              "value": 2,
            },
            Object {
              "className": "orange",
              "label": "orange",
              "value": 3,
            },
            Object {
              "className": "yellow",
              "label": "yellow",
              "value": 4,
            },
            Object {
              "className": "green",
              "label": "green",
              "value": 5,
            },
            Object {
              "className": "blue",
              "label": "blue",
              "value": 6,
            },
            Object {
              "className": "violet",
              "label": "violet",
              "value": 7,
            },
            Object {
              "className": "gray",
              "label": "gray",
              "value": 8,
            },
            Object {
              "className": "white",
              "label": "white",
              "value": 9,
            },
            Object {
              "className": "gold",
              "label": "gold",
              "value": -1,
            },
            Object {
              "className": "silver",
              "label": "silver",
              "value": -2,
            },
          ]
        }
        value={0}
      />
    </div>
    <div
      className="col-xs-6 col-sm-2"
      key="tolerance"
    >
      <BandSelector
        key="tolerance"
        label="Tolerance"
        name="tolerance"
        onChange={[Function]}
        options={
          Array [
            Object {
              "className": "brown",
              "label": "brown",
              "value": 1,
            },
            Object {
              "className": "red",
              "label": "red",
              "value": 2,
            },
            Object {
              "className": "green",
              "label": "green",
              "value": 0.5,
            },
            Object {
              "className": "blue",
              "label": "blue",
              "value": 0.25,
            },
            Object {
              "className": "violet",
              "label": "violet",
              "value": 0.1,
            },
            Object {
              "className": "gold",
              "label": "gold",
              "value": 5,
            },
            Object {
              "className": "silver",
              "label": "silver",
              "value": 10,
            },
          ]
        }
        value={5}
      />
    </div>
    <div
      className="col-xs-6 col-sm-2"
      key="tempCoef"
    >
      <BandSelector
        key="tempCoef"
        label="Temp. Coef."
        name="tempCoef"
        onChange={[Function]}
        options={
          Array [
            Object {
              "className": "black",
              "label": "black",
              "value": 250,
            },
            Object {
              "className": "brown",
              "label": "brown",
              "value": 100,
            },
            Object {
              "className": "red",
              "label": "red",
              "value": 50,
            },
            Object {
              "className": "orange",
              "label": "orange",
              "value": 15,
            },
            Object {
              "className": "yellow",
              "label": "yellow",
              "value": 25,
            },
            Object {
              "className": "green",
              "label": "green",
              "value": 20,
            },
            Object {
              "className": "blue",
              "label": "blue",
              "value": 10,
            },
            Object {
              "className": "violet",
              "label": "violet",
              "value": 5,
            },
            Object {
              "className": "gray",
              "label": "gray",
              "value": 1,
            },
          ]
        }
        value={15}
      />
    </div>
  </div>
</form>
`;

exports[`ResistorForm should render full form 1`] = `
<form
  class="resistor-form"
>
  <div
    class="row"
  >
    <div
      class="form-group col-sm-6 offset-sm-3 col-md-2 offset-md-5"
    >
      <label>
        Strips
        <select
          class="form-control"
          name="bands"
        >
          <option
            value="3"
          >
            3-strip
          </option>
          <option
            value="4"
          >
            4-strip
          </option>
          <option
            value="5"
          >
            5-strip
          </option>
          <option
            selected=""
            value="6"
          >
            6-strip
          </option>
        </select>
      </label>
    </div>
  </div>
  <div
    class="row"
  >
    <div
      class="col-xs-6 col-sm-2 offset-sm-0"
    >
      <div
        class="form-group"
      >
        <label>
          1st Digit
          <select
            class="form-control brown"
            name="digit1"
          >
            <option
              class="brown"
              label="brown"
              selected=""
              value="1"
            >
              brown
            </option>
            <option
              class="red"
              label="red"
              value="2"
            >
              red
            </option>
            <option
              class="orange"
              label="orange"
              value="3"
            >
              orange
            </option>
            <option
              class="yellow"
              label="yellow"
              value="4"
            >
              yellow
            </option>
            <option
              class="green"
              label="green"
              value="5"
            >
              green
            </option>
            <option
              class="blue"
              label="blue"
              value="6"
            >
              blue
            </option>
            <option
              class="violet"
              label="violet"
              value="7"
            >
              violet
            </option>
            <option
              class="gray"
              label="gray"
              value="8"
            >
              gray
            </option>
            <option
              class="white"
              label="white"
              value="9"
            >
              white
            </option>
          </select>
        </label>
      </div>
    </div>
    <div
      class="col-xs-6 col-sm-2"
    >
      <div
        class="form-group"
      >
        <label>
          2nd Digit
          <select
            class="form-control black"
            name="digit2"
          >
            <option
              class="black"
              label="black"
              selected=""
              value="0"
            >
              black
            </option>
            <option
              class="brown"
              label="brown"
              value="1"
            >
              brown
            </option>
            <option
              class="red"
              label="red"
              value="2"
            >
              red
            </option>
            <option
              class="orange"
              label="orange"
              value="3"
            >
              orange
            </option>
            <option
              class="yellow"
              label="yellow"
              value="4"
            >
              yellow
            </option>
            <option
              class="green"
              label="green"
              value="5"
            >
              green
            </option>
            <option
              class="blue"
              label="blue"
              value="6"
            >
              blue
            </option>
            <option
              class="violet"
              label="violet"
              value="7"
            >
              violet
            </option>
            <option
              class="gray"
              label="gray"
              value="8"
            >
              gray
            </option>
            <option
              class="white"
              label="white"
              value="9"
            >
              white
            </option>
          </select>
        </label>
      </div>
    </div>
    <div
      class="col-xs-6 col-sm-2"
    >
      <div
        class="form-group"
      >
        <label>
          3rd Digit
          <select
            class="form-control black"
            name="digit3"
          >
            <option
              class="black"
              label="black"
              selected=""
              value="0"
            >
              black
            </option>
            <option
              class="brown"
              label="brown"
              value="1"
            >
              brown
            </option>
            <option
              class="red"
              label="red"
              value="2"
            >
              red
            </option>
            <option
              class="orange"
              label="orange"
              value="3"
            >
              orange
            </option>
            <option
              class="yellow"
              label="yellow"
              value="4"
            >
              yellow
            </option>
            <option
              class="green"
              label="green"
              value="5"
            >
              green
            </option>
            <option
              class="blue"
              label="blue"
              value="6"
            >
              blue
            </option>
            <option
              class="violet"
              label="violet"
              value="7"
            >
              violet
            </option>
            <option
              class="gray"
              label="gray"
              value="8"
            >
              gray
            </option>
            <option
              class="white"
              label="white"
              value="9"
            >
              white
            </option>
          </select>
        </label>
      </div>
    </div>
    <div
      class="col-xs-6 col-sm-2"
    >
      <div
        class="form-group"
      >
        <label>
          Multiplier
          <select
            class="form-control black"
            name="multiplier"
          >
            <option
              class="black"
              label="black"
              selected=""
              value="0"
            >
              black
            </option>
            <option
              class="brown"
              label="brown"
              value="1"
            >
              brown
            </option>
            <option
              class="red"
              label="red"
              value="2"
            >
              red
            </option>
            <option
              class="orange"
              label="orange"
              value="3"
            >
              orange
            </option>
            <option
              class="yellow"
              label="yellow"
              value="4"
            >
              yellow
            </option>
            <option
              class="green"
              label="green"
              value="5"
            >
              green
            </option>
            <option
              class="blue"
              label="blue"
              value="6"
            >
              blue
            </option>
            <option
              class="violet"
              label="violet"
              value="7"
            >
              violet
            </option>
            <option
              class="gray"
              label="gray"
              value="8"
            >
              gray
            </option>
            <option
              class="white"
              label="white"
              value="9"
            >
              white
            </option>
            <option
              class="gold"
              label="gold"
              value="-1"
            >
              gold
            </option>
            <option
              class="silver"
              label="silver"
              value="-2"
            >
              silver
            </option>
          </select>
        </label>
      </div>
    </div>
    <div
      class="col-xs-6 col-sm-2"
    >
      <div
        class="form-group"
      >
        <label>
          Tolerance
          <select
            class="form-control gold"
            name="tolerance"
          >
            <option
              class="brown"
              label="brown"
              value="1"
            >
              brown
            </option>
            <option
              class="red"
              label="red"
              value="2"
            >
              red
            </option>
            <option
              class="green"
              label="green"
              value="0.5"
            >
              green
            </option>
            <option
              class="blue"
              label="blue"
              value="0.25"
            >
              blue
            </option>
            <option
              class="violet"
              label="violet"
              value="0.1"
            >
              violet
            </option>
            <option
              class="gold"
              label="gold"
              selected=""
              value="5"
            >
              gold
            </option>
            <option
              class="silver"
              label="silver"
              value="10"
            >
              silver
            </option>
          </select>
        </label>
      </div>
    </div>
    <div
      class="col-xs-6 col-sm-2"
    >
      <div
        class="form-group"
      >
        <label>
          Temp. Coef.
          <select
            class="form-control orange"
            name="tempCoef"
          >
            <option
              class="black"
              label="black"
              value="250"
            >
              black
            </option>
            <option
              class="brown"
              label="brown"
              value="100"
            >
              brown
            </option>
            <option
              class="red"
              label="red"
              value="50"
            >
              red
            </option>
            <option
              class="orange"
              label="orange"
              selected=""
              value="15"
            >
              orange
            </option>
            <option
              class="yellow"
              label="yellow"
              value="25"
            >
              yellow
            </option>
            <option
              class="green"
              label="green"
              value="20"
            >
              green
            </option>
            <option
              class="blue"
              label="blue"
              value="10"
            >
              blue
            </option>
            <option
              class="violet"
              label="violet"
              value="5"
            >
              violet
            </option>
            <option
              class="gray"
              label="gray"
              value="1"
            >
              gray
            </option>
          </select>
        </label>
      </div>
    </div>
  </div>
</form>
`;
